# mipt-algorithms

./: README.md
1_term/ConsoleApplication1/: ConsoleApplication1.sdf
1_term/Knapsack/: Source.cpp
1_term/List/: Functions.cpp  Main.cpp
1_term/Merge_Sort/: Merge_Sort.cpp  Merge_Sort.h
1_term/Radix_Sort/: Main.cpp  Radix_sort.h
1_term/Shell_sort/: Shell_sort.h
1_term/Sorts_Research/: mergesort.c
1_term/binprint_mem/: Source.cpp
1_term/binprint_uint/: Source.cpp
1_term/column/: Source.cpp
1_term/count_lines/: 4.cpp
1_term/count_unique/: count_unique.sln
1_term/fill_rand+sort+clock/: fill_rand+sort+clock.sln
1_term/find_max/: Source.cpp
1_term/gcd/: 4_gcd.sln
1_term/gorner_scheme/: Source.cpp
1_term/heap_sort/: heap.cpp  heap.h  interpreter.cpp
1_term/interpretator/: Source.cpp
1_term/invert_bits/: 7_invert_bits.sdf
1_term/kahan_sum/: Source.cpp
1_term/levenshtein_distance/: Source.cpp
1_term/local_max/: Source.cpp
1_term/max_increasing_subsequence/: Source.cpp
1_term/neighbours/: Source.cpp
1_term/pack_float/: Source.cpp
1_term/partial_sum/: 1.cpp
1_term/q_sort_optimized/: q_sort.h
1_term/revers_letters/: 7.cpp
1_term/reverse_numbers/: 1_reverse_numbers.sdf
1_term/reverse_order/: 5_reverse_order.sdf  5_reverse_order.sln
1_term/sort_students/: Source.cpp
1_term/unique_words/: Source.cpp
1_term/unsigned_rotl/: 3_unsigned rotl.sdf
1_term/urand/: Source.cpp
1sem/ConsoleApplication1/: ConsoleApplication1.sln
1sem/Intervals/: Intervals.cpp
1sem/List/: Functions.h
1sem/Merge_Sort/: Main.cpp
1sem/Radix_Sort/: Radix_Sort.cpp
1sem/Shell_sort/: Main.cpp  Shell_sort.cpp
1sem/Sorts_Research/: Sorts_Research.sdf  Sorts_Research.sln
1sem/approx_device_epsilon/: 2.cpp
1sem/binprint_uchar/: Source.cpp
1sem/bisection_solve/: Source.cpp
1sem/bisection_solve_2/: Source.cpp
1sem/check_and_correct/: Source.cpp
1sem/check_result/: Source.cpp
1sem/comparison/: Source.cpp
1sem/count_unique/: count_unique.sdf
1sem/count_words10/: 5.cpp
1sem/diameter_points/: Source.cpp
1sem/factorisation/: Source.cpp
1sem/fill_rand+sort+clock/: fill_rand+sort+clock.sdf
1sem/frequency_words/: Source.cpp
1sem/gcd/: 4_gcd.sdf
1sem/heap_interpretator/: Heap.sdf  Heap.sln
1sem/heap_sort/: main.cpp  sort.cpp  sort.h
1sem/hexprint_mem/: 8_hexprint_mem.sdf  8_hexprint_mem.sln
1sem/insertion_sort/: Source.cpp
1sem/insertion_sort_strings/: Source.cpp
1sem/invert_bits/: 7_invert_bits.sln
1sem/max_sum_subsequence/: Source.cpp
1sem/mem_rotr/: mem_rotr(2).sdf  mem_rotr(2).sln
1sem/print_ascii/: Source.cpp
1sem/q_sort_optimized/: Source.cpp  q_sort.cpp
1sem/quick_sort_simple/: Source.cpp  q_sort.cpp  q_sort.h
1sem/reverse_numbers/: 1_reverse_numbers.sln
1sem/rotate_left/: 6_rotate_left.sdf  6_rotate_left.sln
1sem/time/: Source.cpp
1sem/unpack_float/: Source.cpp
1sem/unsigned_rotl/: 3_unsigned rotl.sln
1sem/work_with_heap/: Source.cpp
1sem/write_char/: Source.cpp
2_term/BigInt/: main.cpp
2_term/Controller/: Source.cpp
2_term/GameObject_inheritance/: MyObjects.cpp
2_term/Heroes of dungeons and classes/: heroes_of_dungeons.cpp
2_term/Matrix/: Matrix.h
2_term/MyString/: MyString.h
2_term/RB-tree/: main.cpp  rb_tree.h
2_term/Vector2D/: Main.cpp  Vector2D.cpp
2_term/acmp_chess_knight/: chess_knight.cpp
2_term/acmp_garden/: garden.cpp
2_term/acmp_message/: message.cpp
2_term/algorithm_usage/: Source.cpp
2_term/hash_table_cuckoo/: hash_table_cuckoo.h
2_term/hash_table_open_adressing/: hash_table_open_addr.h  main.cpp
2_term/spoj_bottom/: bottom.cpp
2_term/test/: Source.cpp
2sem/BigInt/: bigint.cpp  bigint.h
2sem/GameObject_inheritance/: Main.cpp  MyObjects.h
2sem/Heroes of dungeons and classes/: heroes_of_dungeons.h  main.cpp
2sem/Matrix/: Main.cpp  Matrix.cpp
3_term/flows/flow-network/: CMakeLists.txt
3_term/flows/hamming-distance/: CMakeLists.txt  README.md  hamming_distance.cpp  hamming_distance.h
3_term/mst/kruskal/: CMakeLists.txt  README.md
3_term/mst/salesman-problem/: CMakeLists.txt
3_term/pathfinding/floyd/: CMakeLists.txt  floyd.cpp
3sem/1st_homework/arbitrage/: CMakeLists.txt  trade_arbitrage.cpp
3sem/1st_homework/puzzle/: CMakeLists.txt  astar.cpp  astar.h  main.cpp  permutation.cpp  permutation.h  puzzle.cpp  puzzle.h
3sem/treap/treap-and-binary-tree/: CMakeLists.txt
3sem/treap/treap-and-binary-tree/include/: treap.h
3sem/treap/width-diff/: CMakeLists.txt
(+222 files in other folders)
